<?xml version="1.0" encoding="utf-8"?>

<resources>
    <string name="app_name">My News</string>
    <string name="menu_item_notifications">Notifications</string>
    <string name="menu_item_help">Help</string>
    <string name="menu_item_about">About</string>
    <string name="menu_item_search">Search</string>

    <!-- Used in NavigationDrawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="description_image_recycler_view">image from New York Times API</string>
    <string name="activity_main_menu_drawer_notifications">Notifications</string>
    <string name="activity_main_menu_drawer_configuration">Configuration</string>
    <string name="activity_main_menu_drawer_help">Help</string>
    <string name="activity_main_menu_drawer_about">About</string>
    <string name="activity_main_menu_drawer_news_feed">News feed</string>
    <string name="activity_main_menu_drawer_title_new_technology">Technology</string>
    <string name="activity_main_menu_drawer_title_most_popular">Most popular</string>
    <string name="activity_main_menu_drawer_title_top_stories">Top stories</string>
    <string name="activity_main_menu_drawer_title_science">science</string>
    <string name="activity_main_menu_drawer_title_sports">sports</string>
    <string name="activity_main_menu_drawer_title_automobile">automobile</string>
    <string name="activity_main_menu_drawer_title_search">Search</string>
    <string name="new_york_times_logo_nav_drawer_header">New York Times Logo</string>

    <!-- Used In NotificationAndSearchActivity and linked fragments -->
    <string name="fragment_base_search_search_field">Search query items</string>
    <string name="fragment_base_search_politics">Politics</string>
    <string name="fragment_base_search_sports">Sports</string>
    <string name="fragment_base_search_travel">Travel</string>
    <string name="fragment_base_search_entrepreneurs">Entrepreneurs</string>
    <string name="fragment_base_search_business">Business</string>
    <string name="fragment_base_search_arts">Arts</string>
    <string name="fragment_base_search_end_date">End Date</string>
    <string name="fragment_base_search_begin_date">Begin Date</string>
    <string name="fragment_base_search_notifications_switch">Enable notifications (once per day)</string>
    <string name="fragment_base_search_search_btn_text">Search</string>
    <string name="date_format" translatable="false">DD/MM/YYYY</string>

    <!-- Used for notification -->
    <string name="channel_name">News alert</string>
    <string name="channel_description">Notify you when articles based on your research keywords are available, once a day</string>
    <string name="notification_title">Real Time Alert</string>
    <string name="notification_message">New articles available !</string>
</resources>