<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/activity_main_menu_drawer_search"
            android:icon="@drawable/ic_search_white_24dp"
            android:title="@string/activity_main_menu_drawer_title_search" />
    </group>

    <item android:title="@string/activity_main_menu_drawer_news_feed">
        <menu>
            <group android:checkableBehavior="single">

                <item
                    android:id="@+id/activity_main_menu_drawer_top_stories"
                    android:icon="@drawable/newspaper"
                    android:title="@string/activity_main_menu_drawer_title_top_stories" />

                <item
                    android:id="@+id/activity_main_menu_drawer_most_popular"
                    android:icon="@drawable/ic_star_border_white_24dp"
                    android:title="@string/activity_main_menu_drawer_title_most_popular" />

                <item
                    android:id="@+id/activity_main_menu_drawer_new_tech"
                    android:icon="@drawable/chip"
                    android:title="@string/activity_main_menu_drawer_title_new_technology" />

                <item
                    android:id="@+id/activity_main_menu_drawer_sports"
                    android:icon="@drawable/medal"
                    android:title="@string/activity_main_menu_drawer_title_sports" />

                <item
                    android:id="@+id/activity_main_menu_drawer_science"
                    android:icon="@drawable/flasks"
                    android:title="@string/activity_main_menu_drawer_title_science" />

                <item
                    android:id="@+id/activity_main_menu_drawer_automobile"
                    android:icon="@drawable/sports_car"
                    android:title="@string/activity_main_menu_drawer_title_automobile" />

            </group>
        </menu>
    </item>


    <item android:title="@string/activity_main_menu_drawer_configuration">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/activity_main_menu_drawer_notifications"
                    android:icon="@drawable/ic_notifications_active_white_24dp"
                    android:title="@string/activity_main_menu_drawer_notifications" />
                <item
                    android:id="@+id/activity_main_menu_drawer_help"
                    android:icon="@drawable/ic_help_outline_white_24dp"
                    android:title="@string/activity_main_menu_drawer_help" />
                <item
                    android:id="@+id/activity_main_menu_drawer_about"
                    android:icon="@drawable/ic_info_outline_white_24dp"
                    android:title="@string/activity_main_menu_drawer_about" />
            </group>
        </menu>
    </item>
</menu>