<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/activity_main_menu_search"
            android:title="@string/menu_item_search"
            android:icon="@drawable/ic_search_white_24dp"
            app:showAsAction="ifRoom"/>

        <item
            android:id="@+id/activity_main_menu_notifications"
            android:title="@string/menu_item_notifications"
            app:showAsAction="never" />

        <item
            android:id="@+id/activity_main_menu_help"
            android:title="@string/menu_item_help"
            app:showAsAction="never"/>
        <item
            android:id="@+id/activity_main_menu_about"
            android:title="@string/menu_item_about"
            app:showAsAction="never"/>
    </group>

</menu>